--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">	
-						<a href="/index.html" class="button">INICIO</a>
+						<a href="https://kaiquedlf.github.io/KaiquePortifolio.github.io/" class="button">INICIO</a>
 						<h1></h1>
 						<p></p>
 						
